--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "fauna": "fgu",
     "format": "prettier --write .",
     "lint": "npm run lint:types && npm run lint:eslint && npm run lint:next",
     "lint:eslint": "eslint . --ext=.tsx,.ts",
@@ -46,6 +47,9 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-storybook": "^0.6.10",
+    "fauna-gql-upload": "^2.5.0",
+    "faunadb": "^4.7.1",
+    "graphql": "^16.6.0",
     "prettier": "^2.8.4",
     "tsconfig-paths-webpack-plugin": "^4.0.0"
   }
