--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "lint:contracts": "forge fmt --check",
     "lint:contracts:fix": "forge fmt",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "codegen": "graphql-codegen",
+    "contract:gen": "npx typechain --target ethers-v5 --out-dir ./generated/contract **/abi/*.json"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.5",
     "@next/font": "13.1.6",
     "@svgr/webpack": "^6.5.1",
     "@types/node": "18.13.0",
@@ -25,7 +28,8 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
-    "ethers": "^6.0.3",
+    "ethers": "^5.0.0",
+    "faunadb-fql-lib": "^0.13.0",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -34,6 +38,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
+    "@graphql-codegen/cli": "^2.16.5",
+    "@graphql-codegen/client-preset": "^1.3.0",
     "@storybook/addon-actions": "^6.5.16",
     "@storybook/addon-essentials": "^6.5.16",
     "@storybook/addon-interactions": "^6.5.16",
@@ -42,6 +48,7 @@
     "@storybook/manager-webpack5": "^6.5.16",
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
+    "@typechain/ethers-v5": "^10.2.0",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "babel-loader": "^8.3.0",
@@ -52,6 +59,7 @@
     "faunadb": "^4.7.1",
     "graphql": "^16.6.0",
     "prettier": "^2.8.4",
-    "tsconfig-paths-webpack-plugin": "^4.0.0"
+    "tsconfig-paths-webpack-plugin": "^4.0.0",
+    "typechain": "^8.1.1"
   }
 }
