--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@storybook/addon-actions": "^6.5.16",
     "@storybook/addon-essentials": "^6.5.16",
     "@storybook/addon-interactions": "^6.5.16",
+    "@storybook/addon-knobs": "^6.4.0",
     "@storybook/addon-links": "^6.5.16",
     "@storybook/builder-webpack5": "^6.5.16",
     "@storybook/manager-webpack5": "^6.5.16",
@@ -59,6 +60,7 @@
     "faunadb": "^4.7.1",
     "graphql": "^16.6.0",
     "prettier": "^2.8.4",
+    "storybook-addon-next-router": "^4.0.2",
     "tsconfig-paths-webpack-plugin": "^4.0.0",
     "typechain": "^8.1.1"
   }
