--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "alchemy-sdk": "^2.4.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "ethers": "^5.0.0",
@@ -33,6 +34,7 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-use": "^17.4.0",
     "styled-components": "^5.3.6",
     "typescript": "4.9.5"
   },
