--- a/package.json
+++ b/package.json
@@ -26,22 +26,29 @@
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "connectkit": "^1.1.3",
+    "crypto": "^1.0.1",
+    "date-fns": "^2.29.3",
     "alchemy-sdk": "^2.4.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "ethers": "^5.0.0",
     "faunadb-fql-lib": "^0.13.0",
+    "iron-session": "^6.3.1",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "siwe": "^1.1.6",
     "react-use": "^17.4.0",
     "styled-components": "^5.3.6",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "wagmi": "^0.11.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
     "@graphql-codegen/cli": "^2.16.5",
     "@graphql-codegen/client-preset": "^1.3.0",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@storybook/addon-actions": "^6.5.16",
     "@storybook/addon-essentials": "^6.5.16",
     "@storybook/addon-interactions": "^6.5.16",
