--- a/package.json
+++ b/package.json
@@ -26,20 +26,21 @@
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "alchemy-sdk": "^2.4.3",
     "connectkit": "^1.1.3",
     "crypto": "^1.0.1",
     "date-fns": "^2.29.3",
-    "alchemy-sdk": "^2.4.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "ethers": "^5.0.0",
     "faunadb-fql-lib": "^0.13.0",
+    "framer-motion": "^9.0.7",
     "iron-session": "^6.3.1",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "siwe": "^1.1.6",
     "react-use": "^17.4.0",
+    "siwe": "^1.1.6",
     "styled-components": "^5.3.6",
     "typescript": "4.9.5",
     "wagmi": "^0.11.5"
