--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-use": "^17.4.0",
     "siwe": "^1.1.6",
     "styled-components": "^5.3.6",
