--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,7 @@
 # Public
 NEXT_PUBLIC_APP_ENV="dev" # dev | prod
-NEXT_PUBLIC_ALCHEMY_APP_NAME="Goerli"
-NEXT_PUBLIC_ALCHEMY_ID="zdh727p8ppff0n6l"
-NEXT_PUBLIC_NETWORK_ID="5"
+NEXT_PUBLIC_ALCHEMY_APP_NAME="Cabin Census"
+NEXT_PUBLIC_USE_TESTNETS=true
 NEXT_PUBLIC_FAUNA_GRAPHQL_BASE_URL='https://graphql.us.fauna.com/graphql'
 NEXT_PUBLIC_FAUNA_CLIENT_KEY='fauna-client-key'
 
@@ -12,3 +11,7 @@ FAUNA_DB_HOST='db.us.fauna.com'
 
 # Session/Cookies Configuration
 IRON_SESSION_PASSWORD="complex_password_at_least_32_characters_long"
+
+# Alchemy Providers (Testnets when develop)
+NEXT_PUBLIC_ETH_ALCHEMY_ID="key"
+NEXT_PUBLIC_POLYGON_ALCHEMY_ID="key"
