--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "@wagmi/chains": "^0.2.9",
     "alchemy-sdk": "^2.4.3",
     "connectkit": "^1.1.3",
     "crypto": "^1.0.1",
