Unlock hooks and data builder updates (#49)

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ NEXT_PUBLIC_FAUNA_GRAPHQL_BASE_URL='https://graphql.us.fauna.com/graphql'
 NEXT_PUBLIC_FAUNA_CLIENT_KEY='fauna-client-key'
 NEXT_PUBLIC_CITIZENSHIP_LOCK_ADDRESS='0xAAae475e2e1D92Ffd4a103A72FDc9f5301896e28'
 NEXT_PUBLIC_CITIZENSHIP_LOCK_CHAIN_ID='5'
+NEXT_PUBLIC_VERCEL_URL='' # e.g. 07b1-98-43-76-5.ngrok.io for local ngrok dev
 
 # Fauna
 FAUNA_SERVER_SECRET="fauna-server-secret"
@@ -13,6 +14,10 @@ FAUNA_DB_HOST='db.us.fauna.com'
 
 # Session/Cookies Configuration
 IRON_SESSION_PASSWORD="complex_password_at_least_32_characters_long"
+
+# Contract Signer
+# Public: 0xDE6FB38C439C006a03188116F44eBb50aD27FE19
+SIGNER_PRIVATE_KEY="key"
 
 # Alchemy Providers (Testnets when develop)
 NEXT_PUBLIC_ETH_ALCHEMY_ID="key"
