--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@babel/core": "^7.20.12",
     "@graphql-codegen/cli": "^2.16.5",
     "@graphql-codegen/client-preset": "^1.3.0",
+    "@graphql-codegen/gql-tag-operations-preset": "^1.7.4",
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@storybook/addon-actions": "^6.5.16",
     "@storybook/addon-essentials": "^6.5.16",
