--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ NEXT_PUBLIC_USE_TESTNETS=true
 NEXT_PUBLIC_FAUNA_GRAPHQL_BASE_URL='https://graphql.us.fauna.com/graphql'
 NEXT_PUBLIC_FAUNA_CLIENT_KEY='fauna-client-key'
 NEXT_PUBLIC_VERCEL_URL='' # e.g. 07b1-98-43-76-5.ngrok.io for local ngrok dev
+NEXT_PUBLIC_GOOGLE_MAPS_API_KEY="" # See README for instructions
 
 # Fauna
 FAUNA_SERVER_SECRET="fauna-server-secret"
