--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
     "@typechain/ethers-v5": "^10.2.0",
+    "@types/google.maps": "^3.52.5",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "babel-loader": "^8.3.0",
