Implement file upload (#113)

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,6 @@ SIGNER_PRIVATE_KEY="key"
 
 # Alchemy Providers (Testnets when develop)
 NEXT_PUBLIC_ETH_ALCHEMY_ID="key"
+
+# Pinata
+PINATA_API_JWT="key"
