Rr/image gallery (#116)
* Image Gallery

* Using IPFS + Custom Gateway

* detect arrow keys

* Move gateway to env var

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ NEXT_PUBLIC_FAUNA_GRAPHQL_BASE_URL='https://graphql.us.fauna.com/graphql'
 NEXT_PUBLIC_FAUNA_CLIENT_KEY='fauna-client-key'
 NEXT_PUBLIC_VERCEL_URL='' # e.g. 07b1-98-43-76-5.ngrok.io for local ngrok dev
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY="" # See README for instructions
+NEXT_PUBLIC_IPFS_GATEWAY='https://ipfs.io/ipfs/'
 
 # Fauna
 FAUNA_SERVER_SECRET="fauna-server-secret"
