--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-use": "^17.4.0",
     "siwe": "^1.1.6",
+    "slate": "^0.93.0",
+    "slate-react": "^0.93.0",
     "styled-components": "^5.3.6",
     "typescript": "4.9.5",
     "wagmi": "^0.11.5"
