--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@storybook/testing-library": "^0.0.13",
     "@typechain/ethers-v5": "^10.2.0",
     "@types/google.maps": "^3.52.5",
+    "@types/gtag.js": "^0.0.12",
     "@types/multiparty": "^0.0.33",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
