Fixing upload functionality (#220)

--- a/.env.example
+++ b/.env.example
@@ -24,4 +24,5 @@ SIGNER_PRIVATE_KEY="key"
 NEXT_PUBLIC_ETH_ALCHEMY_ID="key"
 
 # Pinata
-PINATA_API_JWT="key"
+NEXT_PUBLIC_PINATA_API_KEY="key"
+NEXT_PUBLIC_PINATA_API_SECRET="key"
