--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react-dom": "18.0.10",
     "@wagmi/chains": "^0.2.9",
     "alchemy-sdk": "^2.4.3",
+    "axios": "^1.4.0",
     "connectkit": "^1.2.3",
     "crypto": "^1.0.1",
     "date-fns": "^2.29.3",
