--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "multiparty": "^4.2.3",
     "next": "13.1.6",
     "next-connect": "^0.13.0",
+    "next-seo": "^6.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
