Email Service Setup + Vouch Implementation

--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,7 @@ NEXT_PUBLIC_PINATA_API_SECRET="key"
 
 # Privy
 PRIVY_APP_SECRET="key"
+
+# Email
+SENDGRID_API_KEY="key"
+SENDGRID_FROM_EMAIL="your-configured-sender"
