--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@pinata/sdk": "^2.1.0",
     "@privy-io/react-auth": "^1.29.0",
     "@privy-io/wagmi-connector": "^0.0.10",
+    "@sendgrid/mail": "^7.7.0",
     "@svgr/webpack": "^6.5.1",
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
