--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "connectkit": "^1.2.3",
     "crypto": "^1.0.1",
     "date-fns": "^2.29.3",
+    "dotenv": "^16.3.1",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "ethers": "^5.0.0",
