--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "fauna-gql-upload": "^2.5.0",
+    "fauna-shell": "^0.15.0",
     "faunadb": "^4.7.1",
     "graphql": "^16.6.0",
     "prettier": "^2.8.4",
