add emails to jd for requested vouches (not on yet)

--- a/.env.example
+++ b/.env.example
@@ -36,3 +36,4 @@ PRIVY_APP_SECRET="key"
 # Email
 SENDGRID_API_KEY="key"
 SENDGRID_FROM_EMAIL="your-configured-sender"
+SENDGRID_DEV_EMAIL="your-dev-email"
