add vercel web analytics

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/react-dom": "18.0.10",
     "@unlock-protocol/networks": "^0.0.15",
     "@unlock-protocol/paywall": "^0.6.5",
+    "@vercel/analytics": "^1.0.2",
     "@wagmi/chains": "^0.2.9",
     "alchemy-sdk": "^2.4.3",
     "axios": "^1.4.0",
