add stripe packages

--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,7 @@ PRIVY_APP_SECRET="key"
 SENDGRID_API_KEY="key"
 SENDGRID_FROM_EMAIL="your-configured-sender"
 SENDGRID_DEV_EMAIL="your-dev-email"
+
+# Stripe
+STRIPE_SECRET_KEY="secretKey"
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="publishableKey"
