--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@privy-io/react-auth": "^1.29.0",
     "@privy-io/wagmi-connector": "^0.0.10",
     "@sendgrid/mail": "^7.7.0",
+    "@stripe/react-stripe-js": "^2.3.0",
+    "@stripe/stripe-js": "^2.1.6",
     "@svgr/webpack": "^6.5.1",
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
@@ -59,6 +61,7 @@
     "siwe": "^1.1.6",
     "slate": "^0.93.0",
     "slate-react": "^0.93.0",
+    "stripe": "^13.6.0",
     "styled-components": "^5.3.6",
     "typescript": "4.9.5",
     "wagmi": "^0.12.12"
