payments partially working. need to finish webhook and confirmation page

--- a/.env.example
+++ b/.env.example
@@ -39,5 +39,8 @@ SENDGRID_FROM_EMAIL="your-configured-sender"
 SENDGRID_DEV_EMAIL="your-dev-email"
 
 # Stripe
+# get this from https://dashboard.stripe.com/test/apikeys
 STRIPE_SECRET_KEY="secretKey"
+# get this from https://dashboard.stripe.com/webhooks or from `stripe listen --forward-to localhost:3000/api/checkout/stripe-webhook` cli command
+STRIPE_WEBHOOK_SECRET="webhookSecret"
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="publishableKey"
