--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "slate": "^0.93.0",
     "slate-react": "^0.93.0",
     "stripe": "^13.6.0",
+    "stripe-event-types": "^3.0.0",
     "styled-components": "^5.3.6",
     "typescript": "4.9.5",
     "wagmi": "^0.12.12"
