better convertkit form

--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,7 @@ STRIPE_SECRET_KEY="secretKey"
 # get this from https://dashboard.stripe.com/webhooks or from `stripe listen --forward-to localhost:3000/api/checkout/stripe-webhook` cli command
 STRIPE_WEBHOOK_SECRET="webhookSecret"
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="publishableKey"
+
+# ConvertKit
+# get this from https://app.convertkit.com/account_settings/advanced_settings
+CONVERTKIT_API_KEY=""
