--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "stripe": "^13.6.0",
     "stripe-event-types": "^3.0.0",
     "styled-components": "^5.3.6",
+    "swr": "^2.2.4",
     "typescript": "4.9.5",
     "wagmi": "^0.12.12"
   },
