--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "styled-components": "^5.3.6",
     "swr": "^2.2.4",
     "typescript": "4.9.5",
+    "use-debounce": "^10.0.0",
+    "viem": "^2.4.1",
     "wagmi": "^0.12.12"
   },
   "devDependencies": {
