--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,8 @@ NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="publishableKey"
 # ConvertKit
 # get this from https://app.convertkit.com/account_settings/advanced_settings
 CONVERTKIT_API_KEY=""
+
+# Postgres - https://vercel.com/docs/storage/vercel-postgres/using-an-orm#prisma
+POSTGRES_URL=""
+# in dev this is the same as POSTGRES_URL
+POSTGRES_URL_NON_POOLING="${POSTGRES_URL}"
