--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "stripe-event-types": "^3.0.0",
     "styled-components": "^5.3.6",
     "swr": "^2.2.4",
-    "typescript": "4.9.5",
+    "typescript": "^5.3.3",
     "use-debounce": "^10.0.0",
     "viem": "^2.4.1",
     "wagmi": "^0.12.12"
@@ -84,7 +84,8 @@
     "@types/multiparty": "^0.0.33",
     "@types/node-fetch": "^2.6.4",
     "@types/styled-components": "^5.1.26",
-    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "babel-loader": "^8.3.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
