--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "next-connect": "^0.13.0",
     "next-seo": "^6.0.0",
     "prop-types": "^15.8.1",
+    "qrcode.react": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
