--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@privy-io/react-auth": "^1.57.1",
     "@privy-io/server-auth": "^1.7.1",
     "@privy-io/wagmi": "^0.2.1",
-    "@sendgrid/mail": "^7.7.0",
+    "@sendgrid/mail": "^8.1.1",
     "@stripe/react-stripe-js": "^2.3.0",
     "@stripe/stripe-js": "^2.1.6",
     "@svgr/webpack": "^6.5.1",
@@ -52,7 +52,7 @@
     "iron-session": "^6.3.1",
     "jose": "^4.14.4",
     "multiparty": "^4.2.3",
-    "next": "13.1.6",
+    "next": "^13.5.6",
     "next-connect": "^0.13.0",
     "next-seo": "^6.0.0",
     "prop-types": "^15.8.1",
