--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "prettier": "^2.8.4",
     "prisma": "^5.7.0",
     "tsconfig-paths-webpack-plugin": "^4.0.0",
+    "tsx": "^4.7.1",
     "typechain": "^8.3.2"
   }
 }
