--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.5",
+    "@next/font": "^14.1.3",
     "@pinata/sdk": "^2.1.0",
     "@prisma/client": "^5.7.0",
     "@privy-io/react-auth": "^1.57.1",
