--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "qrcode.react": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-autocomplete": "^2.7.3",
     "react-infinite-scroll-component": "^6.1.0",
     "react-use": "^17.4.0",
     "sharp": "^0.32.5",
