--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "framer-motion": "^9.0.7",
     "iron-session": "^6.3.1",
     "jose": "^4.14.4",
+    "leaflet": "^1.9.4",
+    "leaflet-gesture-handling": "^1.2.2",
     "multiparty": "^4.2.3",
     "next": "^13.5.6",
     "next-connect": "^0.13.0",
@@ -62,6 +64,7 @@
     "react-dom": "18.2.0",
     "react-google-autocomplete": "^2.7.3",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-leaflet": "^4.2.1",
     "react-use": "^17.4.0",
     "sharp": "^0.32.5",
     "siwe": "^2.1.4",
@@ -86,6 +89,7 @@
     "@typechain/ethers-v6": "^0.5.1",
     "@types/google.maps": "^3.52.5",
     "@types/gtag.js": "^0.0.12",
+    "@types/leaflet": "^1.9.12",
     "@types/multiparty": "^0.0.33",
     "@types/node-fetch": "^2.6.4",
     "@types/styled-components": "^5.1.26",
