--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
   "rules": {
     "import/prefer-default-export": "off",
     "semi": ["error", "never"],
-    "@typescript-eslint/semi": ["error", "never"]
+    "@typescript-eslint/semi": ["error", "never"],
+    "react/no-unescaped-entities": 0
   }
 }
