add profile clusters to map

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "jose": "^4.14.4",
     "leaflet": "^1.9.4",
     "leaflet-gesture-handling": "^1.2.2",
+    "leaflet.markercluster": "^1.5.3",
     "multiparty": "^4.2.3",
     "next": "^13.5.6",
     "next-connect": "^0.13.0",
@@ -90,6 +91,7 @@
     "@types/google.maps": "^3.52.5",
     "@types/gtag.js": "^0.0.12",
     "@types/leaflet": "^1.9.12",
+    "@types/leaflet.markercluster": "^1.5.4",
     "@types/multiparty": "^0.0.33",
     "@types/node-fetch": "^2.6.4",
     "@types/styled-components": "^5.1.26",
