Revert "deploy migration before building?"
We can't migrate first because if there are lint/build errors, it may
leave prod in a broken state (code doesn't match db).

The actual order we need is:
- lint and build everythings
- run migrations
- generate site against new version of the db

This reverts commit 81f307dae4668ca617eab76e4046b8769fde6589.

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "([ -n \"${NEXT_PUBLIC_VERCEL}\"] && [ -n \"${POSTGRES_URL}\" ] && npx prisma migrate deploy || true) && npm run build",
+  "buildCommand": "npm run build && ([ -n \"${NEXT_PUBLIC_VERCEL}\"] && [ -n \"${POSTGRES_URL}\" ] && npx prisma migrate deploy || true)",
   "crons": [
     {
       "path": "/api/v2/sync/token",
