--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "prop-types": "^15.8.1",
     "qrcode.react": "^3.1.0",
     "react": "18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "18.2.0",
     "react-google-autocomplete": "^2.7.3",
     "react-infinite-scroll-component": "^6.1.0",
