--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-google-autocomplete": "^2.7.3",
     "react-infinite-scroll-component": "^6.1.0",
     "react-leaflet": "^4.2.1",
+    "react-masonry-css": "^1.0.16",
     "react-use": "^17.4.0",
     "sharp": "^0.32.5",
     "siwe": "^2.1.4",
