--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react": "18.2.0",
     "react-countdown": "^2.3.5",
     "react-dom": "18.2.0",
+    "react-fast-compare": "^3.2.2",
     "react-google-autocomplete": "^2.7.3",
     "react-infinite-scroll-component": "^6.1.0",
     "react-leaflet": "^4.2.1",
