--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "@tanstack/react-query": "^5.27.5",
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
     "@unlock-protocol/networks": "^0.0.21",
     "@unlock-protocol/paywall": "^0.7.1",
     "@vercel/analytics": "^1.0.2",
@@ -53,9 +52,7 @@
     "leaflet": "^1.9.4",
     "leaflet-gesture-handling": "^1.2.2",
     "leaflet.markercluster": "^1.5.3",
-    "multiparty": "^4.2.3",
     "next": "^13.5.6",
-    "next-connect": "^0.13.0",
     "next-seo": "^6.0.0",
     "prop-types": "^15.8.1",
     "qrcode.react": "^3.1.0",
@@ -68,7 +65,6 @@
     "react-leaflet": "^4.2.1",
     "react-masonry-css": "^1.0.16",
     "react-use": "^17.4.0",
-    "sharp": "^0.32.5",
     "siwe": "^2.1.4",
     "slate": "^0.93.0",
     "slate-react": "^0.93.0",
@@ -93,8 +89,8 @@
     "@types/gtag.js": "^0.0.12",
     "@types/leaflet": "^1.9.12",
     "@types/leaflet.markercluster": "^1.5.4",
-    "@types/multiparty": "^0.0.33",
     "@types/node-fetch": "^2.6.4",
+    "@types/react-dom": "^18.3.0",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^6.21.0",
