--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@svgr/webpack": "^6.5.1",
     "@tanstack/react-query": "^5.27.5",
     "@tiptap/extension-color": "^2.6.6",
+    "@tiptap/extension-image": "^2.7.1",
     "@tiptap/extension-placeholder": "^2.7.1",
     "@tiptap/extension-text-style": "^2.6.6",
     "@tiptap/pm": "^2.6.6",
