--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-leaflet": "^4.2.1",
     "react-masonry-css": "^1.0.16",
     "react-use": "^17.4.0",
+    "sharp": "^0.33.5",
     "siwe": "^2.1.4",
     "slate": "^0.93.0",
     "slate-react": "^0.93.0",
