--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@privy-io/server-auth": "^1.7.1",
     "@privy-io/wagmi": "^0.2.1",
     "@sendgrid/mail": "^8.1.1",
+    "@sentry/nextjs": "^8.31.0",
     "@stripe/react-stripe-js": "^2.3.0",
     "@stripe/stripe-js": "^2.1.6",
     "@svgr/webpack": "^6.5.1",
