--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "ethers": "^6.11.1",
+    "formidable": "^3.5.2",
     "framer-motion": "^9.0.7",
     "iron-session": "^6.3.1",
     "jose": "^4.14.4",
@@ -92,6 +93,7 @@
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@next/bundle-analyzer": "^13.4.19",
     "@typechain/ethers-v6": "^0.5.1",
+    "@types/formidable": "^3.4.5",
     "@types/google.maps": "^3.52.5",
     "@types/gtag.js": "^0.0.12",
     "@types/leaflet": "^1.9.12",
