isolate new text only in reply

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "axios": "^1.4.0",
     "date-fns": "^2.29.3",
     "dotenv": "^16.3.1",
+    "email-reply-parser": "^1.8.1",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "ethers": "^6.11.1",
@@ -93,6 +94,7 @@
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@next/bundle-analyzer": "^13.4.19",
     "@typechain/ethers-v6": "^0.5.1",
+    "@types/email-reply-parser": "^1.4.2",
     "@types/formidable": "^3.4.5",
     "@types/google.maps": "^3.52.5",
     "@types/gtag.js": "^0.0.12",
