--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@privy-io/wagmi": "^0.2.12",
     "@sendgrid/mail": "^8.1.1",
     "@sentry/nextjs": "^8.31.0",
+    "@snapshot-labs/snapshot.js": "^0.12.28",
     "@stripe/react-stripe-js": "^2.3.0",
     "@stripe/stripe-js": "^2.1.6",
     "@svgr/webpack": "^6.5.1",
@@ -58,6 +59,7 @@
     "ethers": "^6.11.1",
     "formidable": "^3.5.2",
     "framer-motion": "^9.0.7",
+    "graphql-request": "^7.1.2",
     "iron-session": "^6.3.1",
     "jose": "^4.14.4",
     "leaflet": "^1.9.4",
@@ -76,6 +78,8 @@
     "react-leaflet": "^4.2.1",
     "react-masonry-css": "^1.0.16",
     "react-use": "^17.4.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "sharp": "^0.33.5",
     "siwe": "^2.1.4",
     "stripe": "^13.6.0",
