--- a/package.json
+++ b/package.json
@@ -78,8 +78,7 @@
     "react-leaflet": "^4.2.1",
     "react-masonry-css": "^1.0.16",
     "react-use": "^17.4.0",
-    "remark": "^15.0.1",
-    "remark-html": "^16.0.1",
+    "remarkable": "^2.0.1",
     "sharp": "^0.33.5",
     "siwe": "^2.1.4",
     "stripe": "^13.6.0",
@@ -106,6 +105,7 @@
     "@types/leaflet.markercluster": "^1.5.4",
     "@types/node-fetch": "^2.6.4",
     "@types/react-dom": "^18.3.0",
+    "@types/remarkable": "^2.0.8",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^6.21.0",
