--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@wagmi/cli": "^2.1.2",
+    "ajv": "^8.17.1",
     "babel-loader": "^8.3.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
